--- a/music.html
+++ b/music.html
@@ -109,7 +109,7 @@
   <!-- Tiles Section -->
   <div class="tiles">
     <a href="https://open.spotify.com" target="_blank" class="tile">🎵 Spotify</a>
-    <a href="https://www.udio.com" target="_blank" class="tile">🎶 Udio</a>
+    <a href="https://suno.com/me" target="_blank" class="tile">🎶 Suno</a>
   </div>
 
   <!-- Album Tracker Section -->
