--- a/faith.html
+++ b/faith.html
@@ -47,6 +47,16 @@
       padding: 5px 0;
       border-bottom: 1px solid #5e3570;
     }
+
+    /* NEW: underline prayer subheadings only */
+    .prayer-heading {
+      border-bottom: 2px solid #e1bee7;
+      padding-bottom: 4px;
+      margin-top: 14px;
+      margin-bottom: 6px;
+      list-style: none;
+    }
+
     .verse-box {
       background-color: #4b2b50;
       border-radius: 10px;
@@ -58,7 +68,7 @@
 <body>
   <h1>Faith Hub</h1>
 
-    <!-- Back to Home Button -->
+  <!-- Back to Home Button -->
   <div style="margin-bottom: 20px;">
     <a href="index.html" class="tile" style="width: 120px; height: 50px; padding: 10px; font-size: 1em; display: inline-flex; align-items: center; justify-content: center;">
       ⬅ Home
@@ -76,25 +86,34 @@
   <div class="section">
     <h2>Prayer List</h2>
     <ul id="prayerList">
-      <li><strong>Personal Growth</strong></li>
+      <li class="prayer-heading"><strong>Personal Growth</strong></li>
       <li>Wisdom</li><li>Patience</li><li>Self-control</li><li>Gratitude</li><li>Peace</li><li>Courage</li><li>Humility</li><li>Compassion</li><li>Joy</li><li>Faith</li>
-      <li><strong>Spiritual Life</strong></li>
+
+      <li class="prayer-heading"><strong>Spiritual Life</strong></li>
       <li>Closer relationship with God</li><li>Discernment</li><li>Forgiveness</li><li>Understanding of Scripture</li><li>Strength in temptation</li><li>Guidance from the Holy Spirit</li><li>Boldness in faith</li><li>Heart for worship</li><li>A teachable spirit</li><li>Deeper prayer life</li>
-      <li><strong>Character Development</strong></li>
+
+      <li class="prayer-heading"><strong>Character Development</strong></li>
       <li>Honesty</li><li>Integrity</li><li>Kindness</li><li>Generosity</li><li>Perseverance</li><li>Disciplined mind</li><li>Servant’s heart</li><li>Empathy</li><li>Contentment</li><li>Responsibility</li>
-      <li><strong>Family & Friends</strong></li>
+
+      <li class="prayer-heading"><strong>Family & Friends</strong></li>
       <li>Spouse (or future spouse)</li><li>Children</li><li>Parents</li><li>Siblings</li><li>Friends</li><li>In-laws</li><li>Healing for family</li><li>Unity in family</li><li>Protection for loved ones</li><li>Family salvation</li>
-      <li><strong>Health & Well-being</strong></li>
+
+      <li class="prayer-heading"><strong>Health & Well-being</strong></li>
       <li>Physical health</li><li>Mental health</li><li>Emotional healing</li><li>Protection from illness</li><li>Restful sleep</li><li>Energy and strength</li><li>Freedom from addiction</li><li>Healthy habits</li><li>Healing from trauma</li><li>Relief from pain</li>
-      <li><strong>Work & Purpose</strong></li>
+
+      <li class="prayer-heading"><strong>Work & Purpose</strong></li>
       <li>Career guidance</li><li>Job satisfaction</li><li>Favor at work</li><li>Financial provision</li><li>Wisdom in decisions</li><li>Integrity in work</li><li>Creativity</li><li>Productivity</li><li>Right opportunities</li><li>Work-life balance</li>
-      <li><strong>Community & Society</strong></li>
+
+      <li class="prayer-heading"><strong>Community & Society</strong></li>
       <li>Local leaders</li><li>Church leadership</li><li>Teachers and educators</li><li>First responders</li><li>Police and military</li><li>Homeless individuals</li><li>Orphans and widows</li><li>Prisoners</li><li>Victims of abuse</li><li>Refugees</li>
-      <li><strong>Global Concerns</strong></li>
+
+      <li class="prayer-heading"><strong>Global Concerns</strong></li>
       <li>Peace in conflict zones</li><li>Persecuted Christians</li><li>Global church unity</li><li>Protection of the environment</li><li>Justice for the oppressed</li><li>Ending human trafficking</li><li>Clean water access</li><li>Food security</li><li>Healing from natural disasters</li><li>Wise global leadership</li>
-      <li><strong>Personal Relationships</strong></li>
+
+      <li class="prayer-heading"><strong>Personal Relationships</strong></li>
       <li>Reconciliation</li><li>Deeper friendships</li><li>Good mentors</li><li>Opportunities to serve</li><li>Freedom from bitterness</li><li>Guarded speech</li><li>Pure thoughts</li><li>Loving enemies</li><li>Accountability partners</li><li>Healthy boundaries</li>
-      <li><strong>Future & Trust</strong></li>
+
+      <li class="prayer-heading"><strong>Future & Trust</strong></li>
       <li>Trust in God’s plan</li><li>Hope for the future</li><li>Open doors</li><li>Protection from fear</li><li>God’s timing</li><li>Fulfillment of calling</li><li>Spiritual legacy</li><li>Eternal perspective</li><li>Faithfulness in trials</li><li>Readiness for Christ’s return</li>
     </ul>
   </div>
