--- a/faith.html
+++ b/faith.html
@@ -68,11 +68,9 @@
 <body>
   <h1>Faith Hub</h1>
 
-    <!-- Back to Home Button -->
+  <!-- Back to Home Button (UPDATED) -->
   <div style="margin-bottom: 20px;">
-    <a href="index.html" class="tile" style="width: 120px; height: 50px; padding: 10px; font-size: 1em; display: inline-flex; align-items: center; justify-content: center;">
-      ⬅ Home
-    </a>
+    <button onclick="location.href='index.html'">⬅ Home</button>
   </div>
 
   <!-- Daily Scripture -->
